NetrixDemo/CodeEditorLib/Imaging/FreeImage/Wrapper/FreeImage.NET/src/FreeImage.cs

// ==========================================================
// FreeImage.NET 3
//
// Design and implementation by
// - David Boland (davidboland@vodafone.ie)
//
// Contributors:
// - Andrew S. Townley
// - Hervé Drolon
//
// This file is part of FreeImage 3
//
// COVERED CODE IS PROVIDED UNDER THIS LICENSE ON AN "AS IS" BASIS,
// WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED,
// INCLUDING, WITHOUT LIMITATION, WARRANTIES THAT THE COVERED CODE IS
// FREE OF DEFECTS, MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE OR
// NON-INFRINGING. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE
// OF THE COVERED CODE IS WITH YOU. SHOULD ANY COVERED CODE PROVE
// DEFECTIVE IN ANY RESPECT, YOU (NOT THE INITIAL DEVELOPER OR ANY
// OTHER CONTRIBUTOR) ASSUME THE COST OF ANY NECESSARY SERVICING,
// REPAIR OR CORRECTION. THIS DISCLAIMER OF WARRANTY CONSTITUTES AN
// ESSENTIAL PART OF THIS LICENSE. NO USE OF ANY COVERED CODE IS
// AUTHORIZED HEREUNDER EXCEPT UNDER THIS DISCLAIMER.
//
// Use at your own risk!
//
// ==========================================================

using System;
using System.IO;
using System.Runtime.InteropServices;

namespace FreeImageAPI
{
	/**
	Handle to a bitmap
	*/
	using FIBITMAP = UInt32;
	/**
	Handle to a multipage file
	*/
	using FIMULTIBITMAP = UInt32;
	/**
	Handle to a memory I/O stream
	*/
	using FIMEMORY = UInt32;

	/*	[StructLayout(LayoutKind.Sequential)]
		public class FreeImageIO
		{
			public FI_ReadProc readProc;
			public FI_WriteProc writeProc;
			public FI_SeekProc seekProc;
			public FI_TellProc tellProc;
		}
	
		[StructLayout(LayoutKind.Sequential)]
		public class FI_Handle
		{
			public FileStream stream;
		}
		public delegate void FI_ReadProc(IntPtr buffer, uint size, uint count, IntPtr handle);
		public delegate void FI_WriteProc(IntPtr buffer, uint size, uint count, IntPtr handle);
		public delegate int FI_SeekProc(IntPtr handle, long offset, int origin);
		public delegate int FI_TellProc(IntPtr handle);
		*/

	// Types used in the library (directly copied from Windows) -----------------

	[StructLayout(LayoutKind.Sequential)]
	public class RGBQUAD { 
		public byte rgbBlue;
		public byte rgbGreen;
		public byte rgbRed;
		public byte rgbReserved;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public class RGBTRIPLE { 
		public byte rgbtBlue;
		public byte rgbtGreen;
		public byte rgbtRed;
	}

	[StructLayout(LayoutKind.Sequential)]
	public class BITMAPINFOHEADER {
		public uint size;
		public int width; 
		public int height; 
		public ushort biPlanes; 
		public ushort biBitCount;
		public uint biCompression; 
		public uint biSizeImage; 
		public int biXPelsPerMeter; 
		public int biYPelsPerMeter; 
		public uint biClrUsed; 
		public uint biClrImportant;
	}

	[StructLayout(LayoutKind.Sequential)]
	public class BITMAPINFO {
	  public BITMAPINFOHEADER bmiHeader; 
	  public RGBQUAD bmiColors;
	}

	// Types used in the library (specific to FreeImage) ------------------------
	/** 48-bit RGB 
	*/
	[StructLayout(LayoutKind.Sequential)]
	public class FIRGB16 {
		public ushort red;
		public ushort green;
		public ushort blue;
	}

	/** 64-bit RGBA
	*/
	[StructLayout(LayoutKind.Sequential)]
	public class FIRGBA16 {
		public ushort red;
		public ushort green;
		public ushort blue;
		public ushort alpha;
	}

	/** 96-bit RGB Float
	*/
	[StructLayout(LayoutKind.Sequential)]
	public class FIRGBF {
		public float red;
		public float green;
		public float blue;
	}

	/** 128-bit RGBA Float
	*/
	[StructLayout(LayoutKind.Sequential)]
	public class FIRGBAF {
		public float red;
		public float green;
		public float blue;
		public float alpha;
	}

	/** Data structure for COMPLEX type (complex number)
	*/
	[StructLayout(LayoutKind.Sequential)]
	public class FICOMPLEX {
		// real part
		public double r;
		// imaginary part
		public double i;
	}

	// Important enums ----------------------------------------------------------

	public enum LoadSaveFlags {
		BMP_DEFAULT			= 0,
		BMP_SAVE_RLE		= 1,
		CUT_DEFAULT			= 0,
		DDS_DEFAULT			= 0,
		FAXG3_DEFAULT		= 0,
		GIF_DEFAULT			= 0,
		GIF_LOAD256			= 1,		// Load	the	image as a 256 color image with	ununsed	palette	entries, if	it's 16	or 2 color
		GIF_PLAYBACK		= 2,		// 'Play' the GIF to generate each frame (as 32bpp)	instead	of returning raw frame data	when loading
		HDR_DEFAULT			= 0,
		ICO_DEFAULT			= 0,
		ICO_MAKEALPHA		= 1,		// convert to 32bpp	and	create an alpha	channel	from the AND-mask when loading
		IFF_DEFAULT			= 0,
		JPEG_DEFAULT		= 0,
		JPEG_FAST			= 1,
		JPEG_ACCURATE		= 2,
		JPEG_QUALITYSUPERB	= 0x80,
		JPEG_QUALITYGOOD	= 0x100,
		JPEG_QUALITYNORMAL	= 0x200,
		JPEG_QUALITYAVERAGE	= 0x400,
		JPEG_QUALITYBAD		= 0x800,
		JPEG_CMYK			= 0x1000,	// load	separated CMYK "as is" (use	| to combine with other	flags)
		KOALA_DEFAULT		= 0,
		LBM_DEFAULT			= 0,
		MNG_DEFAULT			= 0,
		PCD_DEFAULT			= 0,
		PCD_BASE			= 1,		// load	the	bitmap sized 768 x 512
		PCD_BASEDIV4		= 2,		// load	the	bitmap sized 384 x 256
		PCD_BASEDIV16		= 3,		// load	the	bitmap sized 192 x 128
		PCX_DEFAULT			= 0,
		PNG_DEFAULT			= 0,
		PNG_IGNOREGAMMA		= 1,		// avoid gamma correction
		PNM_DEFAULT			= 0,
		PNM_SAVE_RAW		= 0,		//	If set the writer saves	in RAW format (i.e.	P4,	P5 or P6)
		PNM_SAVE_ASCII		= 1,		// If	set	the	writer saves in	ASCII format (i.e. P1, P2 or P3)
		PSD_DEFAULT			= 0,
		RAS_DEFAULT			= 0,
		TARGA_DEFAULT		= 0,
		TARGA_LOAD_RGB888	= 1,		//	If set the loader converts RGB555 and ARGB8888 -> RGB888.
		TIFF_DEFAULT		= 0,
		TIFF_CMYK			= 0x0001,	// reads/stores	tags for separated CMYK	(use | to combine with compression flags)
		TIFF_PACKBITS		= 0x0100,	// save using	PACKBITS compression
		TIFF_DEFLATE		= 0x0200,	// save using	DEFLATE	compression	(a.k.a.	ZLIB compression)
		TIFF_ADOBE_DEFLATE	= 0x0400,	// save using	ADOBE DEFLATE compression
		TIFF_NONE			= 0x0800,	// save without any compression
		TIFF_CCITTFAX3		= 0x1000,	//	save using CCITT Group 3 fax encoding
		TIFF_CCITTFAX4		= 0x2000,	//	save using CCITT Group 4 fax encoding
		TIFF_LZW			= 0x4000,	// save	using LZW compression
		TIFF_JPEG			= 0x8000,	// save	using JPEG compression
		WBMP_DEFAULT		= 0,
		XBM_DEFAULT			= 0,
		XPM_DEFAULT			= 0,
	}

	/** I/O image format identifiers.
	*/
	public enum FREE_IMAGE_FORMAT {
		FIF_UNKNOWN = -1,
		FIF_BMP		= 0,
		FIF_ICO		= 1,
		FIF_JPEG	= 2,
		FIF_JNG		= 3,
		FIF_KOALA	= 4,
		FIF_LBM		= 5,
		FIF_IFF = FIF_LBM,
		FIF_MNG		= 6,
		FIF_PBM		= 7,
		FIF_PBMRAW	= 8,
		FIF_PCD		= 9,
		FIF_PCX		= 10,
		FIF_PGM		= 11,
		FIF_PGMRAW	= 12,
		FIF_PNG		= 13,
		FIF_PPM		= 14,
		FIF_PPMRAW	= 15,
		FIF_RAS		= 16,
		FIF_TARGA	= 17,
		FIF_TIFF	= 18,
		FIF_WBMP	= 19,
		FIF_PSD		= 20,
		FIF_CUT		= 21,
		FIF_XBM		= 22,
		FIF_XPM		= 23,
		FIF_DDS     = 24,
		FIF_GIF     = 25,
		FIF_HDR		= 26,
		FIF_FAXG3	= 27
	}

	/** Image type used in FreeImage.
	*/
	public enum FREE_IMAGE_TYPE {
		FIT_UNKNOWN = 0,	// unknown type
		FIT_BITMAP  = 1,	// standard image			: 1-, 4-, 8-, 16-, 24-, 32-bit
		FIT_UINT16	= 2,	// array of unsigned short	: unsigned 16-bit
		FIT_INT16	= 3,	// array of short			: signed 16-bit
		FIT_UINT32	= 4,	// array of unsigned long	: unsigned 32-bit
		FIT_INT32	= 5,	// array of long			: signed 32-bit
		FIT_FLOAT	= 6,	// array of float			: 32-bit IEEE floating point
		FIT_DOUBLE	= 7,	// array of double			: 64-bit IEEE floating point
		FIT_COMPLEX	= 8,	// array of FICOMPLEX		: 2 x 64-bit IEEE floating point
		FIT_RGB16	= 9,	// 48-bit RGB image			: 3 x 16-bit
		FIT_RGBA16	= 10,	// 64-bit RGBA image		: 4 x 16-bit
		FIT_RGBF	= 11,	// 96-bit RGB float image	: 3 x 32-bit IEEE floating point
		FIT_RGBAF	= 12	// 128-bit RGBA float image	: 4 x 32-bit IEEE floating point
	}

	/** Image color type used in FreeImage.
	*/
	public enum	FREE_IMAGE_COLOR_TYPE {
		FIC_MINISWHITE = 0,		// min value is white
		FIC_MINISBLACK = 1,		// min value is black
		FIC_RGB        = 2,		// RGB color model
		FIC_PALETTE    = 3,		// color map indexed
		FIC_RGBALPHA   = 4,		// RGB color model with alpha channel
		FIC_CMYK       = 5		// CMYK color model
	};

	/** Color quantization algorithms.
	Constants used in FreeImage_ColorQuantize.
	*/
	public enum FREE_IMAGE_QUANTIZE	{
		FIQ_WUQUANT = 0,		// Xiaolin Wu color quantization algorithm
		FIQ_NNQUANT = 1			// NeuQuant neural-net quantization algorithm by Anthony Dekker
	}

	/** Dithering algorithms.
	Constants used in FreeImage_Dither.
	*/	
	public enum FREE_IMAGE_DITHER {
		FID_FS			= 0,	// Floyd & Steinberg error diffusion
		FID_BAYER4x4	= 1,	// Bayer ordered dispersed dot dithering (order 2 dithering matrix)
		FID_BAYER8x8	= 2,	// Bayer ordered dispersed dot dithering (order 3 dithering matrix)
		FID_CLUSTER6x6	= 3,	// Ordered clustered dot dithering (order 3 - 6x6 matrix)
		FID_CLUSTER8x8	= 4,	// Ordered clustered dot dithering (order 4 - 8x8 matrix)
		FID_CLUSTER16x16= 5		// Ordered clustered dot dithering (order 8 - 16x16 matrix)
	}
	/** Lossless JPEG transformations
	Constants used in FreeImage_JPEGTransform
	*/
	public enum FREE_IMAGE_JPEG_OPERATION {
		FIJPEG_OP_NONE			= 0,	// no transformation
		FIJPEG_OP_FLIP_H		= 1,	// horizontal flip
		FIJPEG_OP_FLIP_V		= 2,	// vertical flip
		FIJPEG_OP_TRANSPOSE		= 3,	// transpose across UL-to-LR axis
		FIJPEG_OP_TRANSVERSE	= 4,	// transpose across UR-to-LL axis
		FIJPEG_OP_ROTATE_90		= 5,	// 90-degree clockwise rotation
		FIJPEG_OP_ROTATE_180	= 6,	// 180-degree rotation
		FIJPEG_OP_ROTATE_270	= 7		// 270-degree clockwise (or 90 ccw)
	};	

	/** Tone mapping operators.
	Constants used in FreeImage_ToneMapping.
	*/
	public enum FREE_IMAGE_TMO {
		FITMO_DRAGO03	 = 0,	// Adaptive logarithmic mapping (F. Drago, 2003)
		FITMO_REINHARD05 = 1,	// Dynamic range reduction inspired by photoreceptor physiology (E. Reinhard, 2005)
	};

	/** Upsampling / downsampling filters. 
	Constants used in FreeImage_Rescale.
	*/
	public enum FREE_IMAGE_FILTER {
		FILTER_BOX		  = 0,	// Box, pulse, Fourier window, 1st order (constant) b-spline
		FILTER_BICUBIC	  = 1,	// Mitchell & Netravali's two-param cubic filter
		FILTER_BILINEAR   = 2,	// Bilinear filter
		FILTER_BSPLINE	  = 3,	// 4th order (cubic) b-spline
		FILTER_CATMULLROM = 4,	// Catmull-Rom spline, Overhauser spline
		FILTER_LANCZOS3	  = 5	// Lanczos3 filter
	}

	/** Color channels.
	Constants used in color manipulation routines.
	*/
	public enum FREE_IMAGE_COLOR_CHANNEL {
		FICC_RGB	= 0,	// Use red, green and blue channels
		FICC_RED	= 1,	// Use red channel
		FICC_GREEN	= 2,	// Use green channel
		FICC_BLUE	= 3,	// Use blue channel
		FICC_ALPHA	= 4,	// Use alpha channel
		FICC_BLACK	= 5,	// Use black channel
		FICC_REAL	= 6,	// Complex images: use real part
		FICC_IMAG	= 7,	// Complex images: use imaginary part
		FICC_MAG	= 8,	// Complex images: use magnitude
		FICC_PHASE	= 9		// Complex images: use phase
	}


	// Message output function --------------------------------------------------

	public delegate void FreeImage_OutputMessageFunction(FREE_IMAGE_FORMAT format, string msg);
	
	/**
	  FreeImage API
	  See the FreeImage PDF documentation for a definition of each function. 
	*/
	public class FreeImage {
#if (DEBUG)
		private const string dllName = "FreeImaged.dll";
#else
		private const string dllName = "FreeImage.dll";
#endif

		// Init/Error routines ----------------------------------------

		[DllImport(dllName, EntryPoint="FreeImage_Initialise")]
		public static extern void Initialise(bool loadLocalPluginsOnly);
		
		// alias for Americans :)		
		[DllImport(dllName, EntryPoint="FreeImage_Initialise")]
		public static extern void Initialize(bool loadLocalPluginsOnly);
		
		[DllImport(dllName, EntryPoint="FreeImage_DeInitialise")]
		public static extern void DeInitialise();
		
		// alias for Americians :)
		[DllImport(dllName, EntryPoint="FreeImage_DeInitialise")]
		public static extern void DeInitialize();
		
		// Version routines -------------------------------------------

		[DllImport(dllName, EntryPoint="FreeImage_GetVersion")]
		public static extern string GetVersion();
